# face-crop

./: .gitignore  README.md  README_cn.md
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/04-14-backend-real-impl/: check.jsonl  prd.md  task.json
.trellis/tasks/04-14-backend-scaffold/: check.jsonl  task.json
.trellis/tasks/04-15-frontend-initial/: check.jsonl  task.json
.trellis/tasks/04-15-square-candidate-boxes/: check.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-04/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-04/04-14-backend-real-impl/: implement.jsonl  task.json
.trellis/workspace/exhyy/: index.md  journal-1.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: health.py  process.py
backend/app/core/: config.py
backend/app/schemas/: process.py
backend/app/services/: crop_archive.py  cropping.py  errors.py  face_matching.py  image_loading.py  output_writer.py  upload_staging.py
backend/app/utils/: paths.py
backend/tests/: test_health.py  test_process.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/features/face-search/api/: health.ts  (+1 more)
frontend/src/styles/: app.css  index.css
(+21 files in other folders)
